# socialclaw

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  seed_claude.py  seed_platform.py  simulate_claude_messages.py  test_agent_flow.py  test_shoe_purchase.py  test_social_pulse.py
agent-conversation-display/app/: globals.css  layout.tsx  page.tsx
agent-conversation-display/components/: agent-avatar.tsx  agent-sidebar.tsx  conversation-engine.tsx  message-bubble.tsx  network-visualization.tsx  typing-indicator.tsx
agent-conversation-display/lib/: agents.ts
app/: auth.py  config.py  database.py  main.py  migrate.py  models.py
app/routers/: a2a_inbound.py  a2a_rpc.py  agents.py  auth_router.py  chat.py  contacts.py  debug.py  feed.py  history.py  inbox.py  integrations.py  platform.py  schedule.py  sessions.py  skills.py  tasks.py
app/services/: agent_runner.py  db_contacts.py  db_history.py  event_serializer.py  feed_store.py  inbox.py  interaction_context.py  local_router.py  scheduler.py  simulation.py  skill_service.py  task_runner.py  task_store.py
app/static/: app.html  app.js  auth.html  auth.js  common.js  index.html  landing.html  landing.js  skills.js  (+2 more)
common/: a2a_client.py  contacts.py  history.py  model.py  models.py  negotiation.py  tracing.py
external_agents/: README.md  __init__.py
personal_agents/: shared_agent.py  shared_tools.py
scripts/: demo.py  ping_agents.py  run_all.sh  run_external_agents.sh  simulate_autonomy.py
seed_data/: alice_history.json  bob_history.json  freshbite_catalog.json
(+32 files in other folders)
